--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Welcome to the world of popQ! popQ was my first social application and also the first (and only as of now) that I've put up on the Apple App Store.
+Welcome to the world of popQ! popQ was my first social application and also the first that I've put up on the Apple App Store. It's some pretty gross code.
 
 popQ allows you take a quick picture, ask a question, and then send it off to friends who can answer "Yes" or "No." You receive the responses in real time and can keep track of which side is winning out.
 
